# neo-aios

./: .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.aios-core/: core-config.yaml
.aios-core/checklists/: README_MIGRATION_AUDIT.md  architect-checklist.md  component-quality-checklist.md  database-design-checklist.md  db-migration-audit-checklist.md
.aios-core/core/quality-gates/: quality-gate-config.yaml
.aios-core/core/registry/: service-registry.json
.aios-core/data/: agent-config-requirements.yaml  aios-kb.md  workflow-patterns.yaml
.aios-core/development/agent-teams/: team-all.yaml  team-fullstack.yaml  team-no-ui.yaml  team-qa-focused.yaml
.aios-core/development/agents/: aios-master.md  data-engineer-improvements-backlog.md  data-engineer.md  devops.md  qa.md  sm.md
.aios-core/hooks/: pre-commit-mmos-guard.sh  pre-commit-version-check.sh  sync-squads.sh
.aios-custom/: STANDARDS.md
.aios-custom/agents/: aios-master.md  architect.md  dev.md  ux-design-expert.md
.aios-custom/config/: blind-validation.yaml  core-config.yaml  credentials.template.yaml  deployment-strategy.yaml  ecomode.yaml  pipeline-config.yaml  quality-gates.yaml  session-config.yaml  step-registry.yaml
.aios-custom/workflows/: new-project-setup.yaml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: README.md  agent-delegation-tracker.sh  inject-current-date.py  post-response-update.sh  pre-prompt-context.sh  restore-agent-state.sh  scope-enforcer.sh  skill-auto-suggest.py  skill-rules.json
.claude/rules/: CLAUDE_CODE_RESTRICTIONS.md  agent-teams.md  constitution.md  effort-levels.md  model-config.md  output-paths.md
.claude/setup/: settings.json
.claude/skills/dev/: KB.md  (+1 more)
.github/workflows/: ci.yaml  release.yaml
agents/aria/: SKILL.md
agents/codex/: SKILL.md
agents/dara/: SKILL.md
agents/dex/: SKILL.md
agents/gage/: SKILL.md
agents/morgan/: SKILL.md
agents/ops/: SKILL.md
agents/oracle/: SKILL.md
agents/orion/: SKILL.md
agents/pixel/: SKILL.md
agents/professor/: SKILL.md
agents/quinn/: SKILL.md
agents/ralph/: SKILL.md
agents/rune/: SKILL.md
agents/sage/: SKILL.md
agents/sec-ai-code-reviewer/: SKILL.md
agents/sec-api-access-tester/: SKILL.md
agents/sec-client-exposure-scanner/: SKILL.md
agents/sec-cors-csrf-checker/: SKILL.md
agents/sec-deploy-auditor/: SKILL.md
agents/sec-error-leak-detector/: SKILL.md
agents/sec-framework-scanner/: SKILL.md
agents/sec-header-inspector/: SKILL.md
agents/sec-injection-detector/: SKILL.md
agents/sec-jwt-auditor/: SKILL.md
agents/sec-rate-limit-tester/: SKILL.md
agents/sec-redirect-checker/: SKILL.md
agents/sec-rls-guardian/: SKILL.md
agents/sec-secret-scanner/: SKILL.md
agents/sec-supply-chain-monitor/: SKILL.md
agents/sec-upload-validator/: SKILL.md
agents/sec-validation-enforcer/: SKILL.md
agents/sec-xss-hunter/: SKILL.md
agents/tess/: SKILL.md
config/: core-config.yaml  credentials.yaml.example  shannon.yaml
docs/: AGENT-NAMING.md  AGENT-TEMPLATE.md  CONTENT-ANALYSIS.md  ENVIRONMENTS.md  PRD.md  RELEASE-CHECKLIST.md  STANDARDS.md  WORKFLOWS.md  troubleshooting.md
docs/agents/: README.md
docs/api/: README.md
docs/architecture/: ecomode-and-blind-validation.md  mcp-setup.md
docs/guides/: agent-development.md  getting-started.md
scripts/: install.sh  neo-init.py  statusline-custom.sh
src/aios/: __init__.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_loader.py
tests/test_autofix/: test_fixers.py  test_framework.py  test_reflexion.py
tests/test_cli/: test_conflicts.py  test_doctor.py  test_gotchas.py  test_main.py  test_mcp.py  test_memory_agents.py  test_output.py  test_route.py
tests/test_context/: test_deterministic_loader.py  test_memory.py
tests/test_core/: __init__.py  test_cache.py  test_glue.py  test_lazy.py  test_profiling.py  test_waves.py
tests/test_healthcheck/: test_doctor.py  test_engine.py
tests/test_infrastructure/: test_mcp.py
tests/test_intelligence/: test_ecomode.py  test_router.py
tests/test_memory/: test_file_evolution.py  test_gotchas.py  test_hook_bridge.py
tests/test_pipeline/: test_cost_models.py  test_executor.py  test_manager.py  test_models.py  test_registry.py  test_step_models.py
tests/test_quality/: test_blind_validation.py  test_ci_generator.py  test_coderabbit_config.py  test_config.py  test_human_review.py  test_ids.py  test_pr_automation.py  test_precommit.py  test_story_validator.py
tests/test_scope/: test_actions.py  test_enforcer.py
tests/test_security/: test_ast.py  test_orchestrator.py  test_regex.py  test_reports.py  test_validator_framework.py
tools/: README.md
tools/scripts/: run-shannon.sh
tools/squad-creator/: README.md  config.yaml
(+321 files in other folders)
